kustomize/keycloak/keycloak-internet.ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
 name: keycloak.roelvandegrint.com-ingress
 annotations:
  traefik.ingress.kubernetes.io/router.entrypoints: websecure
  cert-manager.io/issuer: letsencrypt-staging-http
spec:
 tls:
   - hosts:
       - keycloak.roelvandegrint.com
     secretName: keycloak-ingress-http-staging
 rules:
   - host: keycloak.roelvandegrint.com
     http:
       paths:
         - path: /
           pathType: Prefix
           backend:
             service:
               name: keycloak
               port:
                 number: 8080
