kustomize/keycloak/keycloak-local.ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
 name: keycloak.k3s-ingress
 annotations:
  traefik.ingress.kubernetes.io/router.entrypoints: web
spec:
 tls:
   - hosts:
       - keycloak.k3s
 rules:
   - host: keycloak.k3s
     http:
       paths:
         - path: /
           pathType: Prefix
           backend:
             service:
               name: keycloak
               port:
                 number: 8080
